=== HEAD

* Deprecate Model.print and Model.each_page (jeremyevans)

* Deprecate Dataset checking that the Database implements the identifier mangling methods (jeremyevans)

* Deprecate Database#reset_schema_utility_dataset private method (jeremyevans)

* Speed up Database#fetch, #from, #select, and #get by using a cached dataset (jeremyevans)

* Make sure adapters with subadapters have fully initialized database instances before calling Database.after_initialize (jeremyevans)

* Set identifier mangling methods on Database initialization (jeremyevans)

* Switch internal use of class variables to instance variables (jeremyevans)

* Deprecate passing an options hash to Database#dataset or Dataset.new (jeremyevans)

* Speed up Dataset#clone (jeremyevans)

* Add sequel_3_dataset_methods extension for Dataset#[]=, #insert_multiple, #to_csv, #db=, and #opts= (jeremyevans)

* Deprecate Dataset#[]=, #insert_multiple, #to_csv, #db=, and #opts= (jeremyevans)

* Add blacklist_security plugin for Model.restricted_columns, Model.set_restricted_columns, Model#set_except, and Model#update_except (jeremyevans)

* Deprecate Model.restricted_columns, Model.set_restricted_columns, Model#set_except, and Model#update_except (jeremyevans)

* Deprecate Database#default_schema (jeremyevans)

* Deprecate Sequel::NotImplemented and defining methods that raise it (jeremyevans)

* Add Database#supports_{index_parsing,foreign_key_parsing,table_listing,view_listing}? (jeremyevans)

* Deprecate Sequel.virtual_row_instance_eval accessor (jeremyevans)

* Deprecate sequel_core.rb and sequel_model.rb (jeremyevans)

* Add graph_each extension for Dataset#graph_each (jeremyevans)

* Deprecate Dataset#graph_each (jeremyevans)

* Add set_overrides extension for Dataset#set_overrides and #set_defaults (jeremyevans)

* Deprecate Dataset#set_overrides and #set_defaults (jeremyevans)

* Deprecate Database#query in the informix adapter (jeremyevans)
