@@ -1,5 +1,7 @@
 === HEAD
 
+* Deprecate Model.pk_or_nil (jeremyevans)
+
 * Deprecate Model.print and Model.each_page (jeremyevans)
 
 * Deprecate Dataset checking that the Database implements the identifier mangling methods (jeremyevans)
